[workspace]
resolver = "2"
members = [
    "node/bench",
    "node/cli",
    "node/executor",
    "node/inspect",
    "node/primitives",
    "node/rpc",
    "node/testing",
    "runtime",
    "utils",
    "pallet/token",
    "pallet/mandate",
    "pallet/relayer",
]
[profile.release]
panic = "unwind"
# Sacrifice compile speed for execution speed by using optimization flags:
# https://doc.rust-lang.org/rustc/linker-plugin-lto.html
lto = "fat"
# https://doc.rust-lang.org/rustc/codegen-options/index.html#codegen-units
codegen-units = 1
