[package]
name = "node-testing"
version = "3.0.0-dev"
authors = ["Teckas Technologies"]
description = "Test utilities for Substrate-clarus node."
license = "Unlicense"
homepage = "https://github.com/Teckas-Technologies"
repository = "https://github.com/Teckas-Technologies/clarus-node"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1" }
fs_extra = "1"
futures = "0.3.21"
log = "0.4.17"
tempfile = "3.1.0"
frame-system = {git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.4.0" }
node-executor = { package = "clarus-node-executor", path = "../executor" }
pallet-asset-conversion = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.4.0" }
pallet-assets = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.4.0" }
pallet-asset-conversion-tx-payment = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.4.0" }
pallet-asset-tx-payment = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.4.0" }
pallet-skip-feeless-payment = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.4.0" }
sc-block-builder = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.4.0" }
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.4.0" }
sc-client-db = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.4.0", features = ["rocksdb"]}
sc-consensus = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.4.0" }
sc-executor = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.4.0" }
sc-service = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.4.0", features = [
	"test-helpers",
	"rocksdb",
]}
sp-api = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.4.0" }
sp-block-builder = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.4.0" }
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.4.0" }
sp-consensus = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.4.0" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.4.0" }
sp-inherents = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.4.0" }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.4.0" }
sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.4.0" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.4.0" }
sp-timestamp = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.4.0", default-features = false}
substrate-test-client = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.4.0" }
pallet-transaction-payment = { version = "4.0.0-dev", tag = "v1.4.0", git = "https://github.com/paritytech/polkadot-sdk.git" }

#local dependencies
node-primitives = { path = "../primitives" }
clarus-runtime = { path = "../../runtime" }
