[package]
name = "clarus-mandate"
version = "1.0.0"
edition = "2021"
license = "GPL-3.0-only"
authors = [ "Eliott Teissonniere" ]
homepage = "https://www.teckas.com/"
repository = "https://github.com/capsule-corp-ternoa/ternoa-pallets"
description = "Ternoa Pallet for Mandate"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# Substrate Frame
frame-support = { version = "4.0.0-dev", default-features = false, tag = "v1.4.0", git = "https://github.com/paritytech/polkadot-sdk.git" }
frame-system  = { version = "4.0.0-dev", default-features = false, tag = "v1.4.0", git = "https://github.com/paritytech/polkadot-sdk.git" }
# Substrate Orubate
sp-std = { version = "8.0.0", default-features = false, tag = "v1.4.0", git = "https://github.com/paritytech/polkadot-sdk.git" }

# Rest
codec = { version = "3.6.1",     default-features = false, features = [ "derive", "max-encoded-len" ], package = "parity-scale-codec" }
scale-info = { version = "2.10.0",    default-features = false, features = ["derive"] }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "scale-info/std",
    "sp-std/std",
]
try-runtime = ["frame-support/try-runtime"]